# ReliFuse

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: ci.yml
docs/: reproducibility.md
examples/: __init__.py  loaded_expert_demo.py  two_expert_demo.py
notebooks/: inference_with_loaded_experts.ipynb  relifuse_two_experts.ipynb  select_then_train_reliFuse.ipynb  train_with_user_selected_experts.ipynb
scripts/: make_reli_process_gif.py
src/relifuse/: __init__.py  checkpoint.py  cli.py  config.py  demo.py  features.py  inputs.py  losses.py  metrics.py  model.py  selection.py  training.py
tests/: test_checkpoint.py  test_inputs.py  test_model.py  test_paper_equations.py  test_selection.py  test_training.py
