[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relifuse"
version = "0.1.0"
description = "Reliability-calibrated posterior fusion for segmentation probability masks"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Truong P. Le"}]
keywords = ["segmentation", "ensemble", "posterior fusion", "medical imaging", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
]

[project.optional-dependencies]
demo = [
  "jupyterlab>=4.0",
  "matplotlib>=3.7",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.scripts]
relifuse = "relifuse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["relifuse*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
